--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ body{
     left: 0;
 }
 
+#header .logo{
+    border-radius: 50%;
+}
+
 #navbar{
     display: flex;
     align-items: center;
@@ -479,6 +483,7 @@ footer .col{
 
 footer .logo{
     margin-bottom: 30px;
+    border-radius: 50%;
 }
 
 footer h4{
